# test-rust-broadcaster

./: .gitignore  Cargo.toml  README.md  install-cli.ps1  install-tauri-cli.bat  run-build-rs.ps1  run-check.ps1  run-clippy.ps1  run-tauri-build.ps1  run-tauri-info.ps1  run-verbose.ps1
.claude/: settings.local.json
.github/workflows/: build.yml
crates/broadcaster-audio/: Cargo.toml
crates/broadcaster-audio/src/: capture.rs  device.rs  error.rs  lib.rs  mixer.rs
crates/broadcaster-capture/: Cargo.toml
crates/broadcaster-capture/src/: error.rs  frame.rs  lib.rs
crates/broadcaster-capture/src/wgc/: d3d11.rs  frame_pool.rs  mod.rs  monitor.rs  session.rs  window.rs
crates/broadcaster-encoder/: Cargo.toml
crates/broadcaster-encoder/src/: aac.rs  error.rs  lib.rs  nvenc.rs  x264.rs
crates/broadcaster-engine/: Cargo.toml
crates/broadcaster-engine/src/: lib.rs  metrics.rs  orchestrator.rs  state.rs
crates/broadcaster-ipc/: Cargo.toml
crates/broadcaster-ipc/src/: commands.rs  events.rs  lib.rs  state.rs  types.rs
crates/broadcaster-transport/: Cargo.toml
crates/broadcaster-transport/src/: connection.rs  error.rs  lib.rs  nal.rs  rtmp.rs
tauri-app/: Cargo.toml  tauri.conf.json
tauri-app/icons/: icon.icns
tauri-app/src/: commands.rs  lib.rs  main.rs
tauri-app/ui/: index.html  package-lock.json  package.json
tauri-app/ui/src/: main.js  styles.css
