[workspace]
resolver = "2"
members = [
    "crates/broadcaster-engine",
    "crates/broadcaster-capture",
    "crates/broadcaster-audio",
    "crates/broadcaster-encoder",
    "crates/broadcaster-transport",
    "crates/broadcaster-ipc",
    "tauri-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/broadcaster"

[workspace.dependencies]
# Windows APIs
windows = { version = "0.58", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Foundation",
    "Foundation_Collections",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Channels
crossbeam-channel = "0.5"

# RTMP
rml_rtmp = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Video encoding
x264 = "0.5"
nvidia-video-codec-sdk = "0.4"

# Audio encoding
fdk-aac = "0.6"

# Utilities
bytes = "1.5"
parking_lot = "0.12"
url = "2.5"

# Internal crates
broadcaster-engine = { path = "crates/broadcaster-engine" }
broadcaster-capture = { path = "crates/broadcaster-capture" }
broadcaster-audio = { path = "crates/broadcaster-audio" }
broadcaster-encoder = { path = "crates/broadcaster-encoder" }
broadcaster-transport = { path = "crates/broadcaster-transport" }
broadcaster-ipc = { path = "crates/broadcaster-ipc" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
