[package]
name = "broadcaster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows live streaming broadcaster"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Internal crates
broadcaster-engine.workspace = true
broadcaster-ipc.workspace = true
