[package]
name = "broadcaster-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASAPI audio capture and mixing"

[dependencies]
windows = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
broadcaster-ipc = { workspace = true }
