[package]
name = "broadcaster-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows Graphics Capture for screen/window capture"

[dependencies]
windows = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
broadcaster-ipc = { workspace = true }
