[package]
name = "broadcaster-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core orchestrator for the broadcaster"

[dependencies]
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
broadcaster-ipc = { workspace = true }
broadcaster-capture = { workspace = true }
broadcaster-audio = { workspace = true }
broadcaster-encoder = { workspace = true }
broadcaster-transport = { workspace = true }
