[package]
name = "broadcaster-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RTMP streaming client"

[dependencies]
tokio = { workspace = true }
rml_rtmp = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
broadcaster-ipc = { workspace = true }
